fixed header width overflow

--- a/css/tomato.css
+++ b/css/tomato.css
@@ -39,7 +39,7 @@ body {
   background-color: var(--color-header-bg);
   align-items: center;
   padding: 1rem 1rem 1rem;
-  width: 100%;
+  width: 100vw;
   height: var(--header-height);
   z-index: var(--z-index-level-6);
 }
